--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,8 @@ gradio>=3.41.2,<=3.48.0
 diffusers>=0.30.1,<=0.31.0
 transformers>=4.46.2
 pycocotools
+xfuser[diffusers,flash-attn]==0.4.0
+yunchang==0.4.1
+flash_attn==2.6.3
+# install flash attention 3 from https://github.com/Dao-AILab/flash-attention.git
+neptune
