--- a/requirements.txt
+++ b/requirements.txt
@@ -28,5 +28,12 @@ pycocotools
 xfuser[diffusers,flash-attn]==0.4.0
 yunchang==0.4.1
 flash_attn==2.6.3
+librosa
+audiofile
 # install flash attention 3 from https://github.com/Dao-AILab/flash-attention.git
 neptune
+julius==0.2.7
+openunmix==1.3.0
+lameenc==1.8.1
+ffmpeg==1.4
+ffmpeg-python==0.2.0
